--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 header {
     overflow: hidden;
-    background-color: #fff;
+    background-color: #015798;
     position: fixed;
     width: 100%;
     top: 0;
